--- a/pikatanuki/client/src/App.css
+++ b/pikatanuki/client/src/App.css
@@ -21,22 +21,44 @@
     padding: 18px;
 }
 
-input {
+textarea.Text {
     background: #272822;
     border: none;
     outline: none;
     color: #f8f8f2;
     padding: 4px 18px;
+    resize: none;
     font-size: 18px;
     font-family: monospace;
+    line-height: 22px;
+    height: 22px;
+}
+
+textarea.multi {
+    height: 180px;
+}
+
+textarea.Text:focus {
+    background: #49483E;
 }
 
 .outAreaItem {
     padding: 4px 18px;
+    line-height: 22px;
 }
 
-input:focus {
-    background: #49483E;
+.outAreaItemResult {
+    color: #ae81ff;
+}
+
+.outAreaItemInfo {
+    color: #d0d0d0;
+}
+
+.smalltext {
+    color: #75715e;
+    font-size: 12px;
+    text-align: right;
 }
 
 .outArea {
@@ -55,4 +77,48 @@ input:focus {
 
 .comment {
     color: #75715e;
+}
+
+::-webkit-scrollbar {
+    width: 12px;
+}
+
+::-webkit-scrollbar-track, ::-webkit-scrollbar-corner {
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #75715e;
+    border-radius: 10px;
+    width: 10px;
+}
+
+/* Based on Sublime Text's Monokai theme */
+
+.cm-s-monokai.CodeMirror {background: #272822; color: #f8f8f2;}
+.cm-s-monokai div.CodeMirror-selected {background: #49483E !important;}
+.cm-s-monokai .CodeMirror-gutters {background: #272822; border-right: 0px;}
+.cm-s-monokai .CodeMirror-linenumber {color: #d0d0d0;}
+.cm-s-monokai .CodeMirror-cursor {border-left: 1px solid #f8f8f0 !important;}
+
+.cm-s-monokai span.cm-comment {color: #75715e;}
+.cm-s-monokai span.cm-atom {color: #ae81ff;}
+.cm-s-monokai span.cm-number {color: #ae81ff;}
+
+.cm-s-monokai span.cm-property, .cm-s-monokai span.cm-attribute {color: #a6e22e;}
+.cm-s-monokai span.cm-keyword {color: #f92672;}
+.cm-s-monokai span.cm-string {color: #e6db74;}
+
+.cm-s-monokai span.cm-variable {color: #a6e22e;}
+.cm-s-monokai span.cm-variable-2 {color: #9effff;}
+.cm-s-monokai span.cm-def {color: #fd971f;}
+.cm-s-monokai span.cm-bracket {color: #f8f8f2;}
+.cm-s-monokai span.cm-tag {color: #f92672;}
+.cm-s-monokai span.cm-link {color: #ae81ff;}
+.cm-s-monokai span.cm-error {background: #f92672; color: #f8f8f0;}
+
+.cm-s-monokai .CodeMirror-activeline-background {background: #373831 !important;}
+.cm-s-monokai .CodeMirror-matchingbracket {
+    text-decoration: underline;
+    color: white !important;
 }
