--- a/pikatanuki/client/src/App.css
+++ b/pikatanuki/client/src/App.css
@@ -4,7 +4,7 @@
     align-items: stretch;
     height: 100vh;
     width: 100%;
-    padding: 40px;
+    padding:0;
     box-sizing: border-box;
     background: #272822;
     font-size: 18px;
@@ -12,19 +12,38 @@
     font-family: monospace;
 }
 
+.header {
+    background:  #49483E;
+    padding: 10px 40px;
+}
+
+.header button {
+    background: #272822;
+    border: none;
+    color: #f8f8f2;
+    border-radius: 3px;
+    font-size: 18px;
+}
+.header button:hover {
+    background: #75715e;
+}
+
 .statusArea {
     position: absolute;
-    color: #75715e;
+    color: #ae81ff;
     right: 40px;
-    top: 40px;
+    top: -4px;
     font-size: 12px;
     padding: 18px;
+}
+
+textarea {
+    outline: none;
 }
 
 textarea.Text {
     background: #272822;
     border: none;
-    outline: none;
     color: #f8f8f2;
     padding: 4px 18px;
     resize: none;
@@ -71,7 +90,9 @@ textarea.Text:focus {
     border: 1px solid #d0d0d0;
     color: #fd971f;
     flex-grow: 1;
+    margin: 40px;
     padding-top: 18px;
+
 
     display: flex;
     flex-direction: column;
@@ -98,31 +119,22 @@ textarea.Text:focus {
 }
 
 /* Based on Sublime Text's Monokai theme */
-
-.cm-s-monokai.CodeMirror {background: #272822; color: #f8f8f2;}
-.cm-s-monokai div.CodeMirror-selected {background: #49483E !important;}
-.cm-s-monokai .CodeMirror-gutters {background: #272822; border-right: 0px;}
-.cm-s-monokai .CodeMirror-linenumber {color: #d0d0d0;}
-.cm-s-monokai .CodeMirror-cursor {border-left: 1px solid #f8f8f0 !important;}
-
-.cm-s-monokai span.cm-comment {color: #75715e;}
-.cm-s-monokai span.cm-atom {color: #ae81ff;}
-.cm-s-monokai span.cm-number {color: #ae81ff;}
-
-.cm-s-monokai span.cm-property, .cm-s-monokai span.cm-attribute {color: #a6e22e;}
-.cm-s-monokai span.cm-keyword {color: #f92672;}
-.cm-s-monokai span.cm-string {color: #e6db74;}
-
-.cm-s-monokai span.cm-variable {color: #a6e22e;}
-.cm-s-monokai span.cm-variable-2 {color: #9effff;}
-.cm-s-monokai span.cm-def {color: #fd971f;}
-.cm-s-monokai span.cm-bracket {color: #f8f8f2;}
-.cm-s-monokai span.cm-tag {color: #f92672;}
-.cm-s-monokai span.cm-link {color: #ae81ff;}
-.cm-s-monokai span.cm-error {background: #f92672; color: #f8f8f0;}
-
-.cm-s-monokai .CodeMirror-activeline-background {background: #373831 !important;}
-.cm-s-monokai .CodeMirror-matchingbracket {
-    text-decoration: underline;
-    color: white !important;
+.outAreaEditor {
+    color: #f8f8f2;
+    padding: 0;
 }
+
+.outAreaEditor div {
+    min-height: 100%;
+}
+
+.comment {color: #75715e;}
+.operator {color: #ae81ff;}
+.number {color: #ae81ff;}
+.keyword {color: #f92672;}
+.string {color: #e6db74;}
+.builtin {color: #9effff;}
+.function {color: #fd971f;}
+.punctuation {color: #f8f8f2;}
+
+.cm-s-monokai .CodeMirror-cursor {border-left: 1px solid #f8f8f0 !important;}
