--- a/pikatanuki/client/src/App.css
+++ b/pikatanuki/client/src/App.css
@@ -89,11 +89,11 @@ textarea.Text:focus {
     border-radius: 4px;
     border: 1px solid #d0d0d0;
     color: #fd971f;
-    flex-grow: 1;
     margin: 40px;
     padding-top: 18px;
 
 
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
     justify-content: start;
@@ -122,6 +122,7 @@ textarea.Text:focus {
 .outAreaEditor {
     color: #f8f8f2;
     padding: 0;
+    width: 10px;
 }
 
 .outAreaEditor div {
@@ -129,19 +130,37 @@ textarea.Text:focus {
 }
 
 .comment {color: #75715e;}
+.specialcomment {color: #e1e1e1;}
 .operator {color: #ae81ff;}
 .number {color: #ae81ff;}
-.keyword {color: #f92672;}
-.string {color: #e6db74;}
+.keyword {color: #f92672; font-weight: bold;}
+.string {color: #e6db74; font-style: italic;}
 .builtin {color: #9effff;}
 .function {color: #fd971f;}
-.punctuation {color: #f8f8f2;}
-
-.cm-s-monokai .CodeMirror-cursor {border-left: 1px solid #f8f8f0 !important;}
+.punctuation {color: #f8f8f2; font-weight: bold;}
 
 .terminal {
     border: 2px solid #090908;
     background: #1d1d19;
-    height: 30vh;
+    height: 20vh;
     padding: 20px 40px;
+    overflow: scroll;
+}
+
+.sideBySide {
+    display: flex;
+    flex-direction: row;
+    flex-grow: 1;
+}
+
+.editPage {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: stretch;
+    flex-grow: 1;
+}
+
+.outAreaTest {
+    margin-left: 0;
 }
