--- a/pikatanuki/client/src/App.css
+++ b/pikatanuki/client/src/App.css
@@ -253,12 +253,12 @@ span.done {
 }
 
 .loginContainer {
+    position: fixed;
     width: 100%;
     background: #27282299;
     height: 100vh;
     top: 0;
     left: 0;
-    position: absolute;
     text-align: center;
     z-index: 9;
     box-sizing: border-box;
